B&L QA/objects/Coaching_Report__c.object
<CustomObject>
    <description>CHNSU object to store the records pertaining to joint call coaching</description>
    <fields>
        <fullName>A_1__c</fullName>
        <description>CHNSU field to capture the score for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Time Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_2__c</fullName>
        <description>CHNSU field to capture the score for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Product Call Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_3__c</fullName>
        <description>CHNSU field to capture the score for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Sales Call Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_1__c</fullName>
        <description>CHNSU field to capture the score for  a MARKETING SENSITIVITY  parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Business Result Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_2__c</fullName>
        <description>CHNSU field to capture the score for  a MARKETING SENSITIVITY  parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Sales Opportunity Find</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_3__c</fullName>
        <description>CHNSU field to capture the score for  a MARKETING SENSITIVITY  parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Push Product Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Result_Analysis_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a MARKETING SENSITIVITY  parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Business Result Analysis (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_1__c</fullName>
        <description>CHNSU field to capture the score for  a PRODUCT KNOWLEDGE parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Our Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2__c</fullName>
        <description>CHNSU field to capture the score for  a PRODUCT KNOWLEDGE parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Competitive Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CHNSU field to capture the name of the coach who was selected by the sales rep while reporting the joint call</description>
        <label>Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APAC_Joint_Call_Coaching1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Skill_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Communication Skill (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Products_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a PRODUCT KNOWLEDGE parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Competitive Products (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Features_Benefits_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Conversion - Features&amp;Benefits(Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Call_Plan_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Customer Call Plan (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Customer Relationship (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_1__c</fullName>
        <description>CHNSU field to capture the score for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Opening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_2__c</fullName>
        <description>CHNSU field to capture the score for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Inquiring &amp; Listening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_3__c</fullName>
        <description>CHNSU field to capture the score for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Product Introduction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <description>CHNSU field to collect date2 till which the coaching report to be prepared</description>
        <label>Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>CHNSU field to capture the date 1 of the joint call coaching report</description>
        <label>Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Deal (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_1__c</fullName>
        <description>CHNSU field to capture the score for LECTURE SLIDES SKILL to be judged by the coach while reporting a joint call coaching</description>
        <label>Lecture Slides Skill (If has)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handle_Objections_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Handle Objections (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Familiarity_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Hospital Familiarity (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiring_Listening_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Inquiring &amp; Listening (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lecture_Slides_Skill_If_has_Comments__c</fullName>
        <description>CHNSU field to capture the comments for LECTURE SLIDES SKILL to be judged by the coach while reporting a joint call coaching</description>
        <label>Lecture Slides Skill (If has) (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Coaching_Date__c</fullName>
        <description>CHNSU field to capture the next coaching date captured by the coach in his joint coaching report</description>
        <label>Next Coaching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opening_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Opening (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Products_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a PRODUCT KNOWLEDGE parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Our Products (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Comments__c</fullName>
        <description>CHNSU field to allow the coach to input the comments in the joint call coaching report.</description>
        <label>Overall Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Call_Record_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Product Call Record (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Introduction_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Product Introduction (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_Product_Opportunity_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a MARKETING SENSITIVITY  parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Push Product Opportunity (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Call_Plan_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Sales Call Plan (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Opportunity_Find_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a MARKETING SENSITIVITY  parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Sales Opportunity Find (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CHNSU field to capture the name of the sales rep</description>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APAC_Joint_Call_Coaching</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session1__c</fullName>
        <description>CHNSU field to collection date2&apos;s session to prepare coaching report</description>
        <label>Session2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>CHNSU field to collection date1&apos;s session to prepare coaching report</description>
        <label>Session1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CHNSU field to capture the status of the joint call</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggestions_on_Improvements__c</fullName>
        <description>CHNSU field to capture any suggestions on improvement given by the coach in his joint coaching report</description>
        <label>Suggestions on Improvements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suitable_Customer_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Suitable Customer (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Management_Comments__c</fullName>
        <description>CHNSU field to capture the comments for a SALES CALL MANAGEMENT parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Time Management (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <description>CHNSU formula field to sum up all individual scores given by the coach in his joint coaching report. This is summed up using a trigger.</description>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Promotional_meterials_Comments__c</fullName>
        <description>CHNSU field to capture the comments for  a SELLING SKILL parameter to be judged by the coach while reporting a joint call coaching</description>
        <label>Use Promotional meterials  (Comments)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Coaching Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Date__c</columns>
        <columns>Session__c</columns>
        <columns>Date2__c</columns>
        <columns>Session1__c</columns>
        <columns>Total_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_30_days</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Date__c</columns>
        <columns>Session__c</columns>
        <columns>Date2__c</columns>
        <columns>Session1__c</columns>
        <columns>Total_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>最近30天</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CHNSU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>JC-{0000000000}</displayFormat>
        <label>Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Report</pluralLabel>
    <recordTypes>
        <fullName>CHNSU_APAC_Joint_Call_Coaching_Closed</fullName>
        <active>true</active>
        <description>CHNSU Record Type to store the records of those calls which have either been set to closed or expired (based on settlement date)</description>
        <label>CHNSU APAC Joint Call Coaching (Closed)</label>
    </recordTypes>
    <recordTypes>
        <fullName>CHNSU_Coaching_Report</fullName>
        <active>true</active>
        <description>CHNSU APAC Joint Call Coaching record type to store the relevant details for the joint calls. Currently used by CHNSU.</description>
        <label>CHNSU Coaching Report</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CHNSU_Next_Coaching_Date</fullName>
        <active>true</active>
        <description>Validation to ensure that the next coaching date chosen by the coach is greater than current day.</description>
        <errorConditionFormula>Next_Coaching_Date__c &lt; Date__c</errorConditionFormula>
        <errorDisplayField>Next_Coaching_Date__c</errorDisplayField>
        <errorMessage>Sorry next coaching should be greater than this current reporting date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date1_should_be_within_3_days</fullName>
        <active>true</active>
        <errorConditionFormula>OR(TODAY() - Date__c &lt; 0, TODAY() - Date__c &gt; 3)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date1 should be within 3 days before from today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date2_should_be_within_3_days</fullName>
        <active>true</active>
        <errorConditionFormula>OR(TODAY() - Date2__c &lt; 0, TODAY() - Date2__c &gt; 3)</errorConditionFormula>
        <errorDisplayField>Date2__c</errorDisplayField>
        <errorMessage>Date2 should be within 3 days before from today</errorMessage>
    </validationRules>
</CustomObject>